# Snake

./: LICENSE  README.md  apple.py  game.py  icons.py  main.py  setup.cfg  snake.py  test.py  tile.py
src/: apple.py  config.py  game.py  main.py  snake.py
