[metadata]
name = snake-mar
version = 0.0.1
author = MarCarrot
author_email = marmar18@live.com
description = A terminal-based Snake game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asiddiqi18/Snake
project_urls =
    Bug Tracker = https://github.com/asiddiqi18/Snake/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
